Ajout de compatiiblité avec pause/play et meilleur design pour graphiques